--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^10.10.0",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
+    "lucide-react": "^0.477.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
